--- a/css/cinemaStyles.css
+++ b/css/cinemaStyles.css
@@ -1,11 +1,20 @@
 #jumbo-title{
-	font-family: roboto;
-	font-weight: 900;
+	font-family:fantasy;
+	font-weight: 200;
 	text-transform:uppercase;
-	color: #fff;
+	color: rgba(255, 255, 255, 0.989);
 }
 .card-img-top {
     width: 100%;
     height: 15vw;
     object-fit: cover;
 }	
+#home {
+	background: url(../img/whitebg.png);
+	
+}
+h1,h2,h3{
+	font-family:fantasy;
+	color: rgba(0, 0, 0, 0.595);
+}
+
